Added manifest, style tweaks

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/hourglass.svg" />
+    <link rel="manifest" href="src/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
+    <style>
+      :root {
+        --fht-background-color: rgb(20, 20, 20);
+        --fht-text-color: rgb(200, 200, 200);
+
+        background-color: var(--fht-background-color);
+        color: var(--fht-text-color);
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
