--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/hourglass.svg" />
-    <link rel="manifest" href="src/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Foonlys Hierarchical Timer" />
     <style>
       :root {
         --fht-background-color: rgb(20, 20, 20);
